test/scc_test/decl/semantic-errors/042.a
042.t:1:10: error: invalid use of 'restrict'